--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
     "@tensorflow/tfjs": "1.7.2",
     "@tensorflow/tfjs-core": "1.7.2",
     "aws-sdk": "^2.646.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-loader": "^2.4.7",
+    "react-loader-spinner": "^3.1.14",
     "react-magic-dropzone": "1.0.1",
+    "react-rainbow-components": "^1.14.1",
     "react-scripts": "2.0.3",
+    "react-tooltip": "^4.2.5",
+    "react-transition-group": "^4.3.0",
     "reactstrap": "^8.4.1"
   },
   "devDependencies": {},
