--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-loader": "^2.4.7",
     "react-magic-dropzone": "1.0.1",
     "react-rainbow-components": "^1.14.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.0.3",
     "react-toastify": "^6.0.0-rc.2-1",
     "react-tooltip": "^4.2.5",
